--- a/grc338/website-proposal/index.html
+++ b/grc338/website-proposal/index.html
@@ -64,34 +64,34 @@
             <h1>Beer Menu</h1>
             <h2>Double Bounce</h2>
             <p>Double Bounce hits first with bitterness and then with a sweetness of hop flavors. Grapefruit, mango, and orange aromas with a medium body and a dry finish.</p>
-            <p>    [Image of an aluminium can of Double Bounce beer] </p>
+            <p>    [An aluminium can of Double Bounce beer] </p>
 
             <h2>"The Kitchen"</h2>
             <p>"The Kitchen" is a tangled chemistry of mild haze, low bitterness, and explosive hop aroma, with notes of bright raspberry, currant, citrus, guava, and passion fruit. </p>
-            <p>    [Image of an aluminium can of "The Kitchen" beer] </p>
+            <p>    [An aluminium can of "The Kitchen" beer] </p>
 
             <h2>Smack Talk</h2>
             <p>Smack Talk rewires your perception of IPAs with its electrifyingly tart and juicy demeanor. Plug into galvanized notes of orange, tangerine, mango, and pineapple, There's no turning back now. </p>
-            <p>    [Image of an aluminium can of Smack Talk beer] </p>
+            <p>    [An aluminium can of Smack Talk beer] </p>
 
             <h2>Drop Shot</h2>
             <p>Classic pale ale in color, notes of caramel are met with hop flavors of pine and citrus. It finishes clean with a moderate ABV of 6%, making it suitably refreshing for rock concerts.</p>
-            <p>    [Image of an aluminium can of Drop Shot beer] </p>
+            <p>    [An aluminium can of Drop Shot beer] </p>
 
             <h2>9-1-1</h2>
             <p>9-1-1 serves a mind-bending whirl of the aromas and flavors of blood orange and Northwest hops. Orange Peel added to the whirlpool, and Blood Orange in the fermenter. So good it almost kills you.</p>
-            <p>    [Image of an aluminium can of 9-1-1 beer] </p>
+            <p>    [An aluminium can of 9-1-1 beer] </p>
 
             <h2>Sneaky Lob</h2>
             <p>Pours a deep, midnight black with a light tan head. Smells of coffee and dark chocolate and the mouthfeel is velvety smooth with flavors of roasted malts, oatmeal, and warm bread.</p>
-            <p>    [Image of an aluminium can of Sneaky Lob beer] </p>
+            <p>    [An aluminium can of Sneaky Lob beer] </p>
          </section>
 
 
          <section>
             <h1>Food Menu</h1>
             <p>   Enjoy a delicious selection of snacks and entrees! </p>
-            <p>    [Image of snacks and entrees on a table.] </p>
+            <p>    [Snacks and entrees on a table.] </p>
 
             <h3>Snacks and Starters</h3>
             <ul>
@@ -166,7 +166,7 @@
                fosters fun, friendship, and community. Our brewery located in Seattle, Washington provides a fast-casual dining restaurant, 
                8 pickleball courts, a bar, and TV screens for you and your friends to catch your favorite game.
             </p>
-            <p>  [Image of a group of pickleball players looking very happy.] </p>
+            <p>  [A group of pickleball players looking very happy.] </p>
          </section>
 
 
