--- a/grc338/website-mobile-first/about.html
+++ b/grc338/website-mobile-first/about.html
@@ -1,4 +1,4 @@
-<!doctype html>  
+<!doctype html>
 <html>
    <head>
       <meta charset="UTF-8">
@@ -8,7 +8,7 @@
       <meta http-equiv="Expires" content="0" />
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" href="https://use.typekit.net/nve6zyq.css">
-      <title>Overhead Slam</title>
+      <title>About</title>
    </head>
    <body>
       <div class="container">
@@ -22,13 +22,14 @@
                </ul>
             </nav>
          </header>
-         <section>
-            <h2>Home</h2>
-            <figure class="images">
-               <img src="images/aerial_image.jpg" alt="Aerial image of the brewery and pickleball courts.">
-            </figure>
-            <p>Where pickleball and beer collide! Come visit! Come play!</p>
-         </section>
+         <h2>About</h2>
+         <figure class="images">
+            <img src="images/pickle_players.jpg" alt="A group of pickleball players looking very happy.">
+         </figure>
+         <p>Overhead Slam is a unique, indoor/outdoor entertainment complex and brewery whose mission is to provide an atmosphere that 
+            fosters fun, friendship, and community. Our brewery located in Seattle, Washington provides a fast-casual dining restaurant, 
+            8 pickleball courts, a bar, and TV screens for you and your friends to catch your favorite game.
+         </p>
       </div>
    </body>
 </html>
