--- a/grc338/website-mobile-first/location.html
+++ b/grc338/website-mobile-first/location.html
@@ -1,4 +1,4 @@
-<!doctype html>  
+<!doctype html>
 <html>
    <head>
       <meta charset="UTF-8">
@@ -8,7 +8,7 @@
       <meta http-equiv="Expires" content="0" />
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" href="https://use.typekit.net/nve6zyq.css">
-      <title>Overhead Slam</title>
+      <title>Location</title>
    </head>
    <body>
       <div class="container">
@@ -22,13 +22,15 @@
                </ul>
             </nav>
          </header>
-         <section>
-            <h2>Home</h2>
-            <figure class="images">
-               <img src="images/aerial_image.jpg" alt="Aerial image of the brewery and pickleball courts.">
-            </figure>
-            <p>Where pickleball and beer collide! Come visit! Come play!</p>
-         </section>
+         <h2>Location</h2>
+         <figure class="images">
+            <img src="images/map_image.jpg" alt="Map that allows you to view the location.">
+         </figure>
+         <h3>   Come visit! Come play!</h3>
+         <p>    529 S Brandon St, Seattle, WA 98108</p>
+         <p>    Brewery and Restaurant: 206-619-8055 </p>
+         <h3>   Planning a party? Call ahead and reserve space!</h3>
+         <p>    Office and scheduling: 206-766-8055 </p>
       </div>
    </body>
 </html>
