--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -22,9 +22,9 @@
                     <nav>
                         <ul>
                             <li><a href="#">Articles</a></li>
-                            <li><a href="#">Gallery</a></li>
+                            <li><a href="photogallery.html">Gallery</a></li>
                             <li><a href="#">About</a></li>
-                            <li><a href="#">Subscribe</a></li>
+                            <li><a href="newsletter.html">Subscribe</a></li>
                         </ul>
                     </nav>
                 </header>
