--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -28,6 +28,8 @@
                         </ul>
                     </nav>
                 </header>
+            </div>
+            <div class="main_story_container">
                 <article>
                         <figure>
                             <img src="egg.jpeg" alt="Egg subtitues like flax, chia, and bananas in open egg shells.">
